# servonaut

./: CLAUDE.md  CONTRACTS.md  CONTRIBUTING.md  README.md  install.ps1  install.sh  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml  publish.yml
docs/: architecture.md  configuration.md  troubleshooting.md
src/servonaut/: __init__.py  app.css  app.py  main.py
src/servonaut/config/: __init__.py  manager.py  migration.py  schema.py  secrets.py
src/servonaut/data/: chat_system_prompt.txt
src/servonaut/mcp/: __init__.py  audit.py  guards.py  installer.py  remote_client.py  server.py  tools.py
tests/: conftest.py  test_ai_analysis_service.py  test_api_client.py  test_auth_service.py  test_azure_service.py  test_cache_service.py  test_chat_service.py  test_chat_tool_converters.py  test_chat_tools.py  test_cloudtrail_service.py  test_cloudwatch_service.py  test_command_history.py  test_config_manager.py  test_config_migration.py  test_config_schema.py  test_config_sync_service.py  test_confirm_action.py  test_connect_command.py  test_connection_service.py  test_custom_server_integration.py  test_custom_server_service.py  test_entitlement_guard.py  test_formatting.py  test_gcp_service.py  test_ip_ban_service.py  test_keyword_store.py  test_log_viewer_service.py  test_login_screen.py  test_match_utils.py  test_mcp_audit.py  test_mcp_guards.py  test_mcp_tools.py  test_ovh_audit.py  test_ovh_billing_service.py  test_ovh_cloud_service.py  test_ovh_config.py  test_ovh_dedicated_service.py  test_ovh_dns_service.py  test_ovh_ip_service.py  test_ovh_monitoring_service.py  (+18 more)
(+94 files in other folders)
