[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "servonaut"
version = "2.4.8"
description = "Interactive TUI for managing servers — SSH, SCP, scanning & more"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: System :: Systems Administration",
]
dependencies = [
    "boto3",
    "tabulate",
    "textual>=8.0.0",
]

[project.optional-dependencies]
test = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]
ai = [
    "httpx>=0.25.0",
]
mcp = ["mcp>=1.0.0"]
all = ["mcp>=1.0.0", "httpx>=0.25.0"]

[project.urls]
Homepage = "https://github.com/zb-ss/ec2-ssh"
Repository = "https://github.com/zb-ss/ec2-ssh"
Issues = "https://github.com/zb-ss/ec2-ssh/issues"

[project.scripts]
servonaut = "servonaut.main:main"

[tool.hatch.build.targets.wheel]
packages = ["src/servonaut"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
